@@ -37,4 +37,6 @@ protected:
   virtual void GetDirectoryHistoryString(const CFileItem* pItem, CStdString& strHistoryString);
   void SetHistoryForPath(const CStdString& strDirectory);
   void GetIMDBDetails(CFileItem *pItem, CIMDBUrl &url);
+
+  virtual void OnQueueItem(int iItem);
 };
